--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+//mixins
+@mixin flexcenter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
 body{
     height: 400px;
     width: 300px;
@@ -11,10 +20,7 @@ body{
         width: 100%;
         position: relative;
         background-color:#2c3e50;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        @include flexcenter;
         text-align: center;
         #error{
             display: none;
