--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+//Variables
+$bg:#2c3e50;
+
 //mixins
 @mixin flexcenter{
     display: flex;
@@ -19,7 +22,7 @@ body{
         height: 100%;
         width: 100%;
         position: relative;
-        background-color:#2c3e50;
+        background-color:$bg;
         @include flexcenter;
         text-align: center;
         #error{
