--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,14 @@ $bg:#2c3e50;
     align-items: center;
     flex-direction: column;
 }
+@mixin buttons{
+    margin: 10px 0;
+    cursor: pointer;
+    background: #3498db;
+    color: #fff;
+    border-radius: 5px;
+    transition: all  ease-in-out .2s;
+}
 
 
 body{
@@ -51,6 +59,7 @@ body{
                 margin: 5px 0;
             }
             button{
+                @include buttons;
                 margin: 10px 0;
                 font-size: 20px;
                 padding: 8px 25px;
