--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,8 @@
 }
 //Variables
 $bg:#2c3e50;
+$white:#fff;
+$black:#000;
 
 //mixins
 @mixin flexcenter{
@@ -21,7 +23,14 @@ $bg:#2c3e50;
     border-radius: 5px;
     transition: all  ease-in-out .2s;
 }
-
+@mixin hover{
+    background: $white;
+    color: $black;
+}
+@mixin active{
+    color: $white;
+    background: transparent;
+}
 
 body{
     height: 400px;
@@ -60,22 +69,14 @@ body{
             }
             button{
                 @include buttons;
-                margin: 10px 0;
                 font-size: 20px;
                 padding: 8px 25px;
-                cursor: pointer;
-                background: #3498db;
-                color: #fff;
                 border: 2px solid #3498db;
-                border-radius: 5px;
-                transition: all  ease-in-out .2s;
                 &:hover{
-                    background:#fff;
-                    color:#000;
+                    @include hover;
                 }
                 &:active{
-                    color: #fff;
-                    background: transparent;
+                   @include active;;
                 }
             }
         }
@@ -107,26 +108,16 @@ body{
             bottom: 20px;
             right: 10px;
             #edit{
-                margin: 10px 0;
-                font-size: 20px;
-                padding: 8px 25px;
-                cursor: pointer;
-                background: #3498db;
-                color: #fff;
-                border: 2px solid #3498db;
-                border-radius: 5px;
-                transition: all  ease-in-out .2s;
+                @include  buttons;
                 font-size: 15px;
                 padding: 2px 5px;
                 border-radius: 5px;
                 border: none;
                 &:hover{
-                    background:#fff;
-                    color:#000;
+                    @include hover;
                 }
                 &:active{
-                    color: #fff;
-                    background: transparent;
+                    @include active;
                 }
             }
         }
