--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,13 @@
 $bg:#2c3e50;
 $white:#fff;
 $black:#000;
+$btnbg:#3198db;
+$error:#ff0000;
+$lblclr:#00ffcc;
+$inptclr:#e74c3c;
+$jokeh3:#17a2b8;
+$jokeans:#bbcbce;
+$aqua:#00ffff;
 
 //mixins
 @mixin flexcenter{
@@ -18,8 +25,8 @@ $black:#000;
 @mixin buttons{
     margin: 10px 0;
     cursor: pointer;
-    background: #3498db;
-    color: #fff;
+    background: $btnbg;
+    color: $white;
     border-radius: 5px;
     transition: all  ease-in-out .2s;
 }
@@ -44,25 +51,23 @@ body{
         text-align: center;
         #error{
             display: none;
-            color: red;
+            color: $error;
             padding: 20px 0px;
         }
         .name{
             display: none;
             label{
-                font-size: 20px;
                 padding: 5px 0px;
                 font-weight: bold;
-                color: #00ffcc;
-                text-shadow: 0px 0px 5px #fff;
+                color: $lblclr;
+                text-shadow: 0px 0px 5px $white;
                 
             }
             input{
                 width: 250px;
                 height: 40px;
-                font-size: 20px;
                 outline: none;
-                border: 1px solid #e74c3c;
+                border: 1px solid $inptclr;
                 border-radius: 5px;
                 padding: 3px 5px;
                 margin: 5px 0;
@@ -71,7 +76,7 @@ body{
                 @include buttons;
                 font-size: 20px;
                 padding: 8px 25px;
-                border: 2px solid #3498db;
+                border: 2px soldi $btnbg;
                 &:hover{
                     @include hover;
                 }
@@ -84,7 +89,7 @@ body{
         .welcome{
             p{
                 position: absolute;
-                color: #fff;
+                color: $white;
                 font-size: 18px;
                 top: 20px;
                 right: 10px;
@@ -93,12 +98,12 @@ body{
         .jokes{
             margin: 10px 0px;
             h3{
-                color: #17a2b8;
+                color: $jokeh3;
                 font-size: 25px;
                 padding: 0px 15px;
             }
             #answer{
-                color: #bbcbce;
+                color: $jokeans;
                 margin-top: 15px;
                 font-size: 22px;
             }
@@ -124,14 +129,13 @@ body{
     }
         footer{
             position: absolute;
-            // bottom: 20px;
             right: 10px;
             font-size: 10px;
             bottom: 5px;
-            color: #fff;
+            color: $white;
             a{
                 text-decoration: none;
-                color: aqua;
+                color: $aqua;
             }
         }
     }
